--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>os templates</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -498,7 +498,7 @@
 
             </div>
             <div class="copyright">
-                <p class="copy"> copyright &copy 2009 - 2021 - All Rights Reserved - Domain Name</p>
+                <p class="copy"> copyright &copy 2009 - 2021 - SIZAN AHMED - Domain Name</p>
                 <p class="template">Template by OS Templates</p>
             </div>
         </div>
